name:                lofman-blog
version:             0.1.0.0
synopsis:            Gwen Lofman's blog site
description:         Please see README.md
homepage:            Lofman.co
license:             BSD3
license-file:        LICENSE
author:              Gwen Lofman
maintainer:          Gwen@Lofman.co
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable lofman-blog
  hs-source-dirs:      Src

  main-is:             Main.hs
  other-modules:       Model.DbTypes
                     , Model.Types
                     , Web.View
                     , Web.View.Meta
                     , Web.View.Template
                     , Web.View.Util

  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , blaze-html
                     , clay
                     , data-default
                     , heroku
                     , http-types
                     , monad-logger
                     , mtl
                     , persistent
                     , persistent-template
                     , persistent-postgresql
                     , Spock
                     , text
                     , transformers
                     , wai
                     , wai-extra
                     , wai-middleware-static
                     , warp
  default-language:    Haskell2010

test-suite new-template-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      Test
  main-is:             Spec.hs
  build-depends:       base
                     , lofman-blog
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lionex/lofman-blog
